tests/fail/backtrace/bad-backtrace-flags.stderr
warning: pointer-to-integer cast
  --> $DIR/bad-backtrace-flags.rs:LL:CC
   |
LL |         miri_get_backtrace(2, 0 as *mut _);
   |                               ^^^^^^^^^^^ pointer-to-integer cast
   |
   = help: this program is using integer-to-pointer casts or (equivalently) `from_exposed_addr`,
   = help: which means that Miri might miss pointer bugs in this program
   = help: see https://doc.rust-lang.org/nightly/std/ptr/fn.from_exposed_addr.html for more details on that operation
   = help: to ensure that Miri does not miss bugs in your program, use `with_addr` (https://doc.rust-lang.org/nightly/std/ptr/index.html#strict-provenance) instead
   = help: you can then pass the `-Zmiri-strict-provenance` flag to Miri, to ensure you are not relying on `from_exposed_addr` semantics
   = help: alternatively, the `-Zmiri-permissive-provenance` flag disables this warning
           
   = note: inside `main` at $DIR/bad-backtrace-flags.rs:LL:CC

error: unsupported operation: unknown `miri_get_backtrace` flags 2
  --> $DIR/bad-backtrace-flags.rs:LL:CC
   |
LL |         miri_get_backtrace(2, 0 as *mut _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unknown `miri_get_backtrace` flags 2
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
           
   = note: inside `main` at $DIR/bad-backtrace-flags.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

